# tpcds-fast-datagen

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  spark_tpcds_gen.py
.github/workflows/: build-dsdgen.yml  ci.yml
benchmarks/: bench_engines.py  bench_vs_duckdb.py
docs/: architecture.md  hdinsight-quickstart.md  live-test-status.md  notebooks-and-livy.md  sf30k-hdi-runbook.md  spark-sizing-best-practices.html  spark-sizing-best-practices.md
src/tpcds_fast_datagen/: __init__.py  binary.py  cli.py  config.py  generator.py  hdi.py  schema.py  worker.py  worker_duckdb.py
src/tpcds_fast_datagen/spark/: __init__.py  _bootstrap.py  api.py  job.py  submit.py
tests/: test_binary.py  test_cli.py  test_config.py  test_schema.py  test_spark_api.py  test_spark_job_paths.py  test_streaming_cast.py
tests/live/: README.md  live_integration_test.py  live_integration_test_self_install.py  live_integration_test_v3.py
